# wall-maker-v3

./: .gitignore  CLAUDE.md  README.md  REWRITE_SPEC.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
src/: App.css  App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/adapters/: desktop.ts  index.ts  web.ts
src/audio/: convert.ts
src/components/: AboutModal.tsx  AppHeader.tsx  AreaEditor.tsx  BackgroundEditor.tsx  CropModal.tsx  FileEditor.tsx  ImportResolutionDialog.tsx  LayoutEditor.tsx  LockImagesEditor.tsx  PackInfoEditor.tsx  SoundsEditor.tsx  WallPreview.tsx  resolutionPresets.ts  snap.ts
src/components/ui/: Button.tsx  ConfirmDialog.tsx  InfoTooltip.tsx  Input.tsx  Modal.tsx  Select.tsx  Switch.tsx  Tabs.tsx  Toast.tsx  cn.ts  index.ts
src/core/: buildPack.ts  coords.ts  errors.ts  exportWorkerClient.ts  layoutPresets.ts  parsePack.ts  renderBackground.ts  state.ts  types.ts
src/hooks/: useFileOperations.tsx
src/i18n/: index.ts
src/i18n/locales/: en.json  ja.json
src/store/: persistAdapter.ts  serialize.ts  useWallStore.ts
src/store/storage/: desktop.ts  index.ts  types.ts  web.ts
src/workers/: exportWorker.ts
